<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game_content"
    android:gravity="bottom"
    android:background="@drawable/backgroundcar"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/heart1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/health_heart1"/>
        <ImageView
            android:id="@+id/heart2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/heart"
            android:layout_marginHorizontal="5dp"
            android:contentDescription="@string/health_heart2"
            />
        <ImageView
            android:id="@+id/heart3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/health_heart3"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:baselineAligned="false"
        android:layout_height="640dp"
        android:id="@+id/verticalLayoutContainer"
        android:orientation="horizontal">
        <!-- First Lane -->
        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:id="@+id/firstLane"
          android:orientation="vertical"
          android:background="@drawable/road"
          android:gravity="bottom|center_horizontal"
          android:layout_weight="1">

          <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
                android:id="@+id/firstLaneDeer1"
              android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/firstLaneDeer2"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/firstLaneDeer3"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/firstLaneDeer4"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/firstLaneDeer5"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/firstLaneDeer6"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/firstLaneDeer7"
                android:tag=""
                />

          <ImageView
              android:id="@+id/specialPosFirstLane"
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/car"
              android:contentDescription="@string/carlane1"
              android:tag="deer"
              />

      </LinearLayout>
        <!-- Second Lane -->
      <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/SecondLane"
            android:orientation="vertical"
            android:background="@drawable/road"
            android:layout_weight="1"
          android:gravity="bottom|center_horizontal">
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/SecondLaneDeer1"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/SecondLaneDeer2"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/SecondLaneDeer3"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/SecondLaneDeer4"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/SecondLaneDeer5"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/SecondLaneDeer6"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/SecondLaneDeer7"
              android:tag=""
              />

          <ImageView
              android:id="@+id/specialPosSecondLane"
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/car"
              android:contentDescription="@string/carlane2"
              android:tag="car"
              />
      </LinearLayout>
        <!-- Third Lane -->
      <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ThirdLane"
            android:orientation="vertical"
            android:background="@drawable/road"
            android:layout_weight="1"
             android:gravity="bottom|center_horizontal">
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/ThirdLaneDeer1"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/ThirdLaneDeer2"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/ThirdLaneDeer3"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/ThirdLaneDeer4"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/ThirdLaneDeer5"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/ThirdLaneDeer6"
              android:tag=""
              />
          <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
              android:contentDescription="@string/deer"
              android:id="@+id/ThirdLaneDeer7"
              android:tag=""
              />
          <ImageView
              android:id="@+id/specialPosThirdLane"
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:layout_gravity="center_horizontal"
              android:src="@drawable/car"
              android:contentDescription="@string/carlane3"
              android:tag="deer"
              />
      </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ForthLane"
            android:orientation="vertical"
            android:background="@drawable/road"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/ForthLaneDeer1"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/ForthLaneDeer2"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/ForthLaneDeer3"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/ForthLaneDeer4"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/ForthLaneDeer5"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/ForthLaneDeer6"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/ForthLaneDeer7"
                android:tag=""
                />
            <ImageView
                android:id="@+id/specialPosForthLane"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/car"
                android:contentDescription="@string/carlane3"
                android:tag="deer"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/FifthLane"
            android:orientation="vertical"
            android:background="@drawable/road"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/FifthLaneDeer1"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/FifthLaneDeer2"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/FifthLaneDeer3"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/FifthLaneDeer4"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/FifthLaneDeer5"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/FifthLaneDeer6"
                android:tag=""
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/plyo_w39i_210318_ss4mp_generated"
                android:contentDescription="@string/deer"
                android:id="@+id/FifthLaneDeer7"
                android:tag=""
                />
            <ImageView
                android:id="@+id/specialPosFifthLane"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/car"
                android:contentDescription="@string/carlane3"
                android:tag="deer"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/customWhite">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/leftBTN"
            android:background="@drawable/round_button"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/leftbtn"
            android:layout_margin="10dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/RightBTN"
            android:background="@drawable/round_button"
            android:src="@drawable/baseline_arrow_forward_24"
            android:contentDescription="@string/rightbtn"
            android:layout_margin="10dp"
            />

    </LinearLayout>

</LinearLayout>